fix: fix src links

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Natty Lean</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/custom.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/custom.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="col-12">
                         <video class="sec-video__video" autoplay muted width="100%">
-                            <source src="/assets/video/example.mp4" type="video/mp4">
+                            <source src="assets/video/example.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                             Basic
                         </h3>
 
-                        <img src="/assets/img/img-2-bottles.webp" alt="2 bottles" class="img-fluid mb-3" />
+                        <img src="assets/img/img-2-bottles.webp" alt="2 bottles" class="img-fluid mb-3" />
 
                         <div class="sec-offers__offer__price-un text-center pb-4 mb-3">
                             $79
@@ -104,7 +104,7 @@
                             Best Value!
                         </h3>
 
-                        <img src="/assets/img/img-6-bottles.webp" alt="6 bottles" class="img-fluid mb-3" />
+                        <img src="assets/img/img-6-bottles.webp" alt="6 bottles" class="img-fluid mb-3" />
 
                         <div class="sec-offers__offer__price-un text-center pb-4 mb-3">
                             $49
@@ -150,7 +150,7 @@
                             Most Popular
                         </h3>
 
-                        <img src="/assets/img/img-3-bottles.webp" alt="3 bottles" class="img-fluid mb-3" />
+                        <img src="assets/img/img-3-bottles.webp" alt="3 bottles" class="img-fluid mb-3" />
 
                         <div class="sec-offers__offer__price-un text-center pb-4 mb-3">
                             $69
@@ -202,7 +202,7 @@
                 <div class="row mt-5 mb-5">
                     <div
                         class="col-12 m-md-5 p-5 d-flex flex-column align-items-center sec-guarantee__content bg-white">
-                        <img src="/assets/img/guarantee-badge.webp" alt=""
+                        <img src="assets/img/guarantee-badge.webp" alt=""
                             class="img-fluid mb-3 sec-guarantee__content__seal" width="200" />
 
                         <h2 class="sec-guarantee__content__title text-center text-uppercase mb-3">
@@ -230,19 +230,19 @@
 
                         <ul class="sec-guarantee__content__lst list-unstyled d-flex justify-content-center flex-wrap">
                             <li class="p-3">
-                                <img src="/assets/img/gmo.png" alt="NO GMO" width="100" />
+                                <img src="assets/img/gmo.png" alt="NO GMO" width="100" />
                             </li>
 
                             <li class="p-3">
-                                <img src="/assets/img/gmp.png" alt="GMP" width="100" />
+                                <img src="assets/img/gmp.png" alt="GMP" width="100" />
                             </li>
 
                             <li class="p-3">
-                                <img src="/assets/img/nat.png" alt="Natural" width="100" />
+                                <img src="assets/img/nat.png" alt="Natural" width="100" />
                             </li>
 
                             <li class="p-3">
-                                <img src="/assets/img/fda.png" alt="FDA" width="100" />
+                                <img src="assets/img/fda.png" alt="FDA" width="100" />
                             </li>
                         </ul>
                     </div>
@@ -578,7 +578,7 @@
         </div>
     </footer>
 
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
