--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </h2>
 
                         <span class="sec-counter__timer">
-                            00:00
+                            20:00
                         </span>
                     </div>
                 </div>
@@ -206,7 +206,7 @@
             <div class="container pt-0 pt-md-5 pb-0 pb-md-5">
                 <div class="row mt-5 mb-5">
                     <div
-                        class="col-12 m-md-5 p-5 d-flex flex-column align-items-center sec-guarantee__content bg-white">
+                        class="col-12 m-lg-5 p-5 d-flex flex-column align-items-center sec-guarantee__content bg-white">
                         <img src="assets/img/guarantee-badge.webp" alt=""
                             class="img-fluid mb-3 sec-guarantee__content__seal" width="200" />
 
@@ -265,7 +265,7 @@
                         </h2>
 
                         <span class="sec-counter__timer">
-                            00:00
+                            20:00
                         </span>
                     </div>
                 </div>
@@ -569,7 +569,7 @@
                         </h2>
 
                         <span class="sec-counter__timer">
-                            00:00
+                            20:00
                         </span>
                     </div>
                 </div>
@@ -726,7 +726,7 @@
 
             </div>
         </section>
-        
+
         <section class="sec-refs">
             <div class="container pt-5 pb-5">
                 <h2 class="sec-refs__title text-center text-uppercase mb-5">
