chore: add attr to button 'buy now'

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Natty Lean</title>
+    <title>Home | Natty Lean</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/custom.css">
 </head>
 
-<body>
+<body id="pgHome">
 
     <main>
         <section class="sec-video">
@@ -96,7 +96,7 @@
 
                         <div class="d-flex justify-content-center">
                             <button type="button"
-                                class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4 bg-secondary" data-js-qtd="2" data-bs-toggle="modal" data-bs-target="#getLeadModal">
+                                class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4 bg-secondary" data-js-qtd="2" data-js-price="158" data-bs-toggle="modal" data-bs-target="#getLeadModal">
                                 BUY NOW
                             </button>
                         </div>
@@ -142,7 +142,7 @@
                         </div>
 
                         <div class="d-flex justify-content-center">
-                            <button type="button" class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4" data-js-qtd="6" data-bs-toggle="modal" data-bs-target="#getLeadModal">
+                            <button type="button" class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4" data-js-qtd="6" data-js-price="294" data-bs-toggle="modal" data-bs-target="#getLeadModal">
                                 BUY NOW
                             </button>
                         </div>
@@ -189,7 +189,7 @@
 
                         <div class="d-flex justify-content-center">
                             <button type="button"
-                                class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4 bg-secondary" data-js-qtd="3" data-bs-toggle="modal" data-bs-target="#getLeadModal">
+                                class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4 bg-secondary" data-js-qtd="3"  data-js-price="158" data-bs-toggle="modal" data-bs-target="#getLeadModal">
                                 BUY NOW
                             </button>
                         </div>
@@ -317,7 +317,7 @@
 
                         <div class="d-flex justify-content-center">
                             <button type="button"
-                                class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4 bg-secondary" data-js-qtd="2" data-bs-toggle="modal" data-bs-target="#getLeadModal">
+                                class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4 bg-secondary" data-js-qtd="2" data-js-price="158" data-bs-toggle="modal" data-bs-target="#getLeadModal">
                                 BUY NOW
                             </button>
                         </div>
@@ -363,7 +363,7 @@
                         </div>
 
                         <div class="d-flex justify-content-center">
-                            <button type="button" class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4" data-js-qtd="6" data-bs-toggle="modal" data-bs-target="#getLeadModal">
+                            <button type="button" class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4" data-js-qtd="6" data-js-price="294" data-bs-toggle="modal" data-bs-target="#getLeadModal">
                                 BUY NOW
                             </button>
                         </div>
@@ -410,7 +410,7 @@
 
                         <div class="d-flex justify-content-center">
                             <button type="button"
-                                class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4 bg-secondary" data-js-qtd="3" data-bs-toggle="modal" data-bs-target="#getLeadModal">
+                                class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4 bg-secondary" data-js-qtd="3"  data-js-price="158" data-bs-toggle="modal" data-bs-target="#getLeadModal">
                                 BUY NOW
                             </button>
                         </div>
@@ -621,7 +621,7 @@
 
                         <div class="d-flex justify-content-center">
                             <button type="button"
-                                class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4 bg-secondary" data-js-qtd="2" data-bs-toggle="modal" data-bs-target="#getLeadModal">
+                                class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4 bg-secondary" data-js-qtd="2" data-js-price="158" data-bs-toggle="modal" data-bs-target="#getLeadModal">
                                 BUY NOW
                             </button>
                         </div>
@@ -667,7 +667,7 @@
                         </div>
 
                         <div class="d-flex justify-content-center">
-                            <button type="button" class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4" data-js-qtd="6" data-bs-toggle="modal" data-bs-target="#getLeadModal">
+                            <button type="button" class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4" data-js-qtd="6" data-js-price="294" data-bs-toggle="modal" data-bs-target="#getLeadModal">
                                 BUY NOW
                             </button>
                         </div>
@@ -714,7 +714,7 @@
 
                         <div class="d-flex justify-content-center">
                             <button type="button"
-                                class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4 bg-secondary" data-js-qtd="3" data-bs-toggle="modal" data-bs-target="#getLeadModal">
+                                class="text-uppercase sec-offers__offer__btn px-5 py-3 mb-4 bg-secondary" data-js-qtd="3"  data-js-price="158" data-bs-toggle="modal" data-bs-target="#getLeadModal">
                                 BUY NOW
                             </button>
                         </div>
