--- a/details.html
+++ b/details.html
@@ -1,1 +1,158 @@
-COMPRA EFETUADA COM SUCESSO!
+<!DOCTYPE html>
+<html lang="en-US">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Congratulations | Natty Lean</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/custom.css">
+</head>
+
+<body id="pgDetails">
+    
+    <main>
+        <section class="sec-tks">
+            <div class="container pt-5 pb-5">
+                <div class="row">
+                    <div class="col-12 d-flex flex-column align-items-center">
+                        <img src="assets/img/logo.png" alt="Natty Lean Logo" class="img-fluid" />
+
+                        <h1 class="sec-tks__title text-uppercase">
+                            Thank You <span data-js-get-client="username"></span> & Congratulations!
+                        </h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+            <div class="container pt-5 pb-5">
+
+                <div class="row pb-5">
+                    <ul class="col-12 footer__lst d-flex justify-content-center flex-wrap list-unstyled text-uppercase">
+                        <li>
+                            <a href="#" class="text-decoration-none text-white fw-bold">
+                                Contact
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" class="text-decoration-none text-white fw-bold">
+                                Terms
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" class="text-decoration-none text-white fw-bold">
+                                Privacy
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" class="text-decoration-none text-white fw-bold">
+                                Return Policy
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" class="text-decoration-none text-white fw-bold">
+                                Shipping
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" class="text-decoration-none text-white fw-bold">
+                                Disclaimer
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" class="text-decoration-none text-white fw-bold">
+                                References
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 text-center footer__text text-white">
+                        <p>
+                            Statements on this website have not
+                            been evaluated by the Food and
+                            Drug Administration. Products are
+                            not intended to diagnose, treat, cure
+                            or prevent any disease.
+                        </p>
+
+                        <p>
+                            The website's content and the
+                            product for sale is based upon the
+                            author's opinion and is provided
+                            solely on an "AS IS" and "AS
+                            AVAILABLE" basis. You should do
+                            your own research and confirm the
+                            information with other sources
+                            when searching for information
+                            regarding health issues and always
+                            review the information carefully with
+                            your professional health care
+                            provider before using any of the
+                            protocols presented on this website
+                            and/or in the product sold here.
+                            Neither H&W nor the author are
+                            engaged in rendering medical or
+                            similar professional services or
+                            advice via this website or in the
+                            product, and the information
+                            provided is not intended to replace
+                            medical advice offered by a
+                            physician or other licensed
+                            healthcare provider. You should not
+                            construe H&W's sale of this product
+                            as an endorsement by H&W of the
+                            views expressed herein, or any
+                            warranty or guarantee of any
+                            strategy, recommendation,
+                            treatment, action, or application of
+                            advice made by the author of the
+                            product.
+                        </p>
+
+                        <p>
+                            Some names and personal
+                            identifying information on this site
+                            have been changed to protect the
+                            privacy of individuals.
+                        </p>
+
+                        <p>
+                            H&W is the retailer of this product.
+                            H&W® is a registered trademark of
+                            H&W, Inc., a Delaware corporation
+                            located at 1444 S. Entertainment
+                            Ave., Suite 410 Boise, ID 83709, USA
+                            and used by permission. H&W's role
+                            as retailer does not constitute an
+                            endorsement, approval or review of
+                            this product or any claim, statement
+                            or opinion used in promotion of this
+                            product.
+                        </p>
+
+                        <p>
+                            © Natty Lean Research 2025. All Rights Reserved.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+    </footer>
+
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/script.js"></script>
+</body>
+
+</html>
