--- a/details.html
+++ b/details.html
@@ -11,17 +11,130 @@
 </head>
 
 <body id="pgDetails">
-    
+
     <main>
         <section class="sec-tks">
             <div class="container pt-5 pb-5">
                 <div class="row">
                     <div class="col-12 d-flex flex-column align-items-center">
-                        <img src="assets/img/logo.png" alt="Natty Lean Logo" class="img-fluid" />
+                        <img src="assets/img/logo.png" alt="Natty Lean Logo" class="img-fluid mb-5" width="300" />
 
                         <h1 class="sec-tks__title text-uppercase">
-                            Thank You <span data-js-get-client="username"></span> & Congratulations!
+                            Thank You <span data-js-get-session="username">Client</span> & Congratulations!
                         </h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="sec-product">
+            <div class="container pt-5 pb-5">
+                <div class="table-responsive">
+                    <table class="table table-bordered text-center">
+                        <thead>
+                            <tr>
+                                <th>
+                                    IMAGE
+                                </th>
+
+                                <th>
+                                    PRICE
+                                </th>
+
+                                <th>
+                                    QUANTITY
+                                </th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <img src="" alt="" class="img-fluid sec-product__img" data-js-get-session="img" width="200" />
+                                </td>
+
+                                <td>
+                                    $<span data-js-get-session="price">0</span>,00
+                                </td>
+
+                                <td>
+                                    <span data-js-get-session="qtd">0</span>
+                                </td>
+
+                                
+                            </tr>
+                        </tbody>
+
+                    </table>
+                </div>
+            </div>
+        </section>
+
+        <section class="sec-infos">
+            <div class="container pt-5 pb-5">
+                <div class="row">
+                    <div class="col">
+                        <p>
+                            Your purchase was successful, and we're
+                            thrilled to have you as a Natty Lean
+                            customer!
+                        </p>
+
+                        <p>
+                            Your credit card statement will reflect a
+                            charge from H&W, the official retailer for
+                            products on this site.
+                        </p>
+
+                        <p>
+                            We aim to process and ship every order
+                            within 48 hours, and you'll receive a
+                            shipment confirmation email from H&W to <span data-js-get-session="usermail">user@mail.com</span> once
+                            your order is on its
+                            way.
+                        </p>
+
+                        <p>Shipping Times</p>
+
+                        <ul>
+                            <li>U.S. Shipping: Please allow 3-5 business days for delivery.</li>
+                            <li>International Shipping: Allow 7-14 business days for delivery</li>
+                        </ul>
+
+                        <p>
+                            If you have any questions or need
+                            assistance with your order, please reach out
+                            to us at:
+                        </p>
+
+                        <p>
+                            Email: <a href="mailto:support@fitnatty.com" target="_blank">support@fitnatty.com</a>
+                        </p>
+
+                        <p>
+                            Tip: To ensure you receive all updates and
+                            notifications about your order, please add
+                            our email to your whitelist or contacts!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="sec-bonus">
+            <div class="container pt-5 pb-5">
+                <div class="row">
+                    <div class="col">
+                        <h2 class="sec-bonus__title text-uppercase">
+                            Free Bonus Gift
+                        </h2>
+
+                        <p>
+                            For your purchase of <span data-js-get-session="qtd">0</span> 
+                            bottles, you’ll receive the ebook <span data-js-set-ebook="name"></span>, ENJOY! 
+                        </p>
+
+                        <img src="" class="img-fluid" data-js-set-ebook="img" />
                     </div>
                 </div>
             </div>
@@ -29,126 +142,126 @@
     </main>
 
     <footer class="footer">
-            <div class="container pt-5 pb-5">
+        <div class="container pt-5 pb-5">
 
-                <div class="row pb-5">
-                    <ul class="col-12 footer__lst d-flex justify-content-center flex-wrap list-unstyled text-uppercase">
-                        <li>
-                            <a href="#" class="text-decoration-none text-white fw-bold">
-                                Contact
-                            </a>
-                        </li>
+            <div class="row pb-5">
+                <ul class="col-12 footer__lst d-flex justify-content-center flex-wrap list-unstyled text-uppercase">
+                    <li>
+                        <a href="#" class="text-decoration-none text-white fw-bold">
+                            Contact
+                        </a>
+                    </li>
 
-                        <li>
-                            <a href="#" class="text-decoration-none text-white fw-bold">
-                                Terms
-                            </a>
-                        </li>
+                    <li>
+                        <a href="#" class="text-decoration-none text-white fw-bold">
+                            Terms
+                        </a>
+                    </li>
 
-                        <li>
-                            <a href="#" class="text-decoration-none text-white fw-bold">
-                                Privacy
-                            </a>
-                        </li>
+                    <li>
+                        <a href="#" class="text-decoration-none text-white fw-bold">
+                            Privacy
+                        </a>
+                    </li>
 
-                        <li>
-                            <a href="#" class="text-decoration-none text-white fw-bold">
-                                Return Policy
-                            </a>
-                        </li>
+                    <li>
+                        <a href="#" class="text-decoration-none text-white fw-bold">
+                            Return Policy
+                        </a>
+                    </li>
 
-                        <li>
-                            <a href="#" class="text-decoration-none text-white fw-bold">
-                                Shipping
-                            </a>
-                        </li>
+                    <li>
+                        <a href="#" class="text-decoration-none text-white fw-bold">
+                            Shipping
+                        </a>
+                    </li>
 
-                        <li>
-                            <a href="#" class="text-decoration-none text-white fw-bold">
-                                Disclaimer
-                            </a>
-                        </li>
+                    <li>
+                        <a href="#" class="text-decoration-none text-white fw-bold">
+                            Disclaimer
+                        </a>
+                    </li>
 
-                        <li>
-                            <a href="#" class="text-decoration-none text-white fw-bold">
-                                References
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="row">
-                    <div class="col-12 text-center footer__text text-white">
-                        <p>
-                            Statements on this website have not
-                            been evaluated by the Food and
-                            Drug Administration. Products are
-                            not intended to diagnose, treat, cure
-                            or prevent any disease.
-                        </p>
-
-                        <p>
-                            The website's content and the
-                            product for sale is based upon the
-                            author's opinion and is provided
-                            solely on an "AS IS" and "AS
-                            AVAILABLE" basis. You should do
-                            your own research and confirm the
-                            information with other sources
-                            when searching for information
-                            regarding health issues and always
-                            review the information carefully with
-                            your professional health care
-                            provider before using any of the
-                            protocols presented on this website
-                            and/or in the product sold here.
-                            Neither H&W nor the author are
-                            engaged in rendering medical or
-                            similar professional services or
-                            advice via this website or in the
-                            product, and the information
-                            provided is not intended to replace
-                            medical advice offered by a
-                            physician or other licensed
-                            healthcare provider. You should not
-                            construe H&W's sale of this product
-                            as an endorsement by H&W of the
-                            views expressed herein, or any
-                            warranty or guarantee of any
-                            strategy, recommendation,
-                            treatment, action, or application of
-                            advice made by the author of the
-                            product.
-                        </p>
-
-                        <p>
-                            Some names and personal
-                            identifying information on this site
-                            have been changed to protect the
-                            privacy of individuals.
-                        </p>
-
-                        <p>
-                            H&W is the retailer of this product.
-                            H&W® is a registered trademark of
-                            H&W, Inc., a Delaware corporation
-                            located at 1444 S. Entertainment
-                            Ave., Suite 410 Boise, ID 83709, USA
-                            and used by permission. H&W's role
-                            as retailer does not constitute an
-                            endorsement, approval or review of
-                            this product or any claim, statement
-                            or opinion used in promotion of this
-                            product.
-                        </p>
-
-                        <p>
-                            © Natty Lean Research 2025. All Rights Reserved.
-                        </p>
-                    </div>
-                </div>
-
+                    <li>
+                        <a href="#" class="text-decoration-none text-white fw-bold">
+                            References
+                        </a>
+                    </li>
+                </ul>
             </div>
+
+            <div class="row">
+                <div class="col-12 text-center footer__text text-white">
+                    <p>
+                        Statements on this website have not
+                        been evaluated by the Food and
+                        Drug Administration. Products are
+                        not intended to diagnose, treat, cure
+                        or prevent any disease.
+                    </p>
+
+                    <p>
+                        The website's content and the
+                        product for sale is based upon the
+                        author's opinion and is provided
+                        solely on an "AS IS" and "AS
+                        AVAILABLE" basis. You should do
+                        your own research and confirm the
+                        information with other sources
+                        when searching for information
+                        regarding health issues and always
+                        review the information carefully with
+                        your professional health care
+                        provider before using any of the
+                        protocols presented on this website
+                        and/or in the product sold here.
+                        Neither H&W nor the author are
+                        engaged in rendering medical or
+                        similar professional services or
+                        advice via this website or in the
+                        product, and the information
+                        provided is not intended to replace
+                        medical advice offered by a
+                        physician or other licensed
+                        healthcare provider. You should not
+                        construe H&W's sale of this product
+                        as an endorsement by H&W of the
+                        views expressed herein, or any
+                        warranty or guarantee of any
+                        strategy, recommendation,
+                        treatment, action, or application of
+                        advice made by the author of the
+                        product.
+                    </p>
+
+                    <p>
+                        Some names and personal
+                        identifying information on this site
+                        have been changed to protect the
+                        privacy of individuals.
+                    </p>
+
+                    <p>
+                        H&W is the retailer of this product.
+                        H&W® is a registered trademark of
+                        H&W, Inc., a Delaware corporation
+                        located at 1444 S. Entertainment
+                        Ave., Suite 410 Boise, ID 83709, USA
+                        and used by permission. H&W's role
+                        as retailer does not constitute an
+                        endorsement, approval or review of
+                        this product or any claim, statement
+                        or opinion used in promotion of this
+                        product.
+                    </p>
+
+                    <p>
+                        © Natty Lean Research 2025. All Rights Reserved.
+                    </p>
+                </div>
+            </div>
+
+        </div>
     </footer>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
