feat: add details pg

--- a/details.html
+++ b/details.html
@@ -19,7 +19,7 @@
                     <div class="col-12 d-flex flex-column align-items-center">
                         <img src="assets/img/logo.png" alt="Natty Lean Logo" class="img-fluid mb-5" width="300" />
 
-                        <h1 class="sec-tks__title text-uppercase">
+                        <h1 class="sec-tks__title text-uppercase text-center">
                             Thank You <span data-js-get-session="username">Client</span> & Congratulations!
                         </h1>
                     </div>
@@ -30,11 +30,11 @@
         <section class="sec-product">
             <div class="container pt-5 pb-5">
                 <div class="table-responsive">
-                    <table class="table table-bordered text-center">
+                    <table class="table align-middle table-bordered text-center">
                         <thead>
                             <tr>
                                 <th>
-                                    IMAGE
+                                    PRODUCT
                                 </th>
 
                                 <th>
@@ -53,12 +53,12 @@
                                     <img src="" alt="" class="img-fluid sec-product__img" data-js-get-session="img" width="200" />
                                 </td>
 
-                                <td>
+                                <td class="text-success">
                                     $<span data-js-get-session="price">0</span>,00
                                 </td>
 
                                 <td>
-                                    <span data-js-get-session="qtd">0</span>
+                                    <span data-js-get-session="qtd">0</span> BOTTLES
                                 </td>
 
                                 
@@ -124,17 +124,17 @@
         <section class="sec-bonus">
             <div class="container pt-5 pb-5">
                 <div class="row">
-                    <div class="col">
-                        <h2 class="sec-bonus__title text-uppercase">
+                    <div class="col-12 d-flex flex-column align-items-center text-white">
+                        <h2 class="sec-bonus__title text-uppercase text-center">
                             Free Bonus Gift
                         </h2>
 
-                        <p>
+                        <p class="sec-bonus__description text-center">
                             For your purchase of <span data-js-get-session="qtd">0</span> 
                             bottles, you’ll receive the ebook <span data-js-set-ebook="name"></span>, ENJOY! 
                         </p>
 
-                        <img src="" class="img-fluid" data-js-set-ebook="img" />
+                        <img src="" class="img-fluid" data-js-set-ebook="img" width="300" />
                     </div>
                 </div>
             </div>
