fix: fix details page mobile

--- a/details.html
+++ b/details.html
@@ -50,7 +50,7 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <img src="" alt="" class="img-fluid sec-product__img" data-js-get-session="img" width="200" />
+                                    <img src="" alt="" class="img-fluid sec-product__img" data-js-get-session="img" />
                                 </td>
 
                                 <td class="text-success">
